--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
     "@react-navigation/stack": "^7.6.12",
+    "buffer": "^6.0.3",
     "react": "19.2.0",
     "react-native": "0.83.0",
+    "react-native-config": "^1.6.1",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
