--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "buffer": "^6.0.3",
     "react": "19.2.0",
     "react-native": "0.83.0",
+    "react-native-calendars": "^1.1313.0",
     "react-native-config": "^1.6.1",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-image-picker": "^8.2.1",
@@ -29,7 +30,7 @@
     "react-native-reanimated": "^4.2.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
-    "react-native-vector-icons": "^10.0.3",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.7.1"
   },
   "devDependencies": {
