--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^7.8.6",
     "@react-navigation/stack": "^7.6.12",
     "buffer": "^6.0.3",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react": "19.2.0",
     "react-native": "0.83.0",
     "react-native-calendars": "^1.1313.0",
@@ -31,7 +32,8 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-worklets": "^0.7.1"
+    "react-native-worklets": "^0.7.1",
+    "react-native-country-picker-modal": "2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
