--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.83.0",
     "react-native-calendars": "^1.1313.0",
     "react-native-config": "^1.6.1",
+    "react-native-geolocation-service": "^5.4.1",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
