--- a/package.json
+++ b/package.json
@@ -17,20 +17,23 @@
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
     "@react-navigation/stack": "^7.6.12",
+    "axios": "^1.13.2",
     "buffer": "^6.0.3",
-    "react-native-modal-datetime-picker": "^17.1.0",
     "react": "19.2.0",
     "react-native": "0.83.0",
     "react-native-calendars": "^1.1313.0",
     "react-native-config": "^1.6.1",
+    "react-native-country-picker-modal": "2.0.0",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "^4.2.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-country-picker-modal": "2.0.0"
+    "react-native-worklets": "^0.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
