--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,9 @@ target 'addons_hr' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  # Explicitly add geolocation native module (autolinking can be flaky)
+  pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
+
   post_install do |installer|
     react_native_post_install(
       installer,
